# crypto_dashboard

./: .gitignore  LICENSE  README.md  index.html  pyproject.toml  requirements.txt  server.py
crypto_dashboard/: dashboard.py  formatters.py
tests/: test_formatters.py
